Update artist name and contact information

--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Your Artist Name</title>
+  <title>Jimbo Jones</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <main>
-    <h1>Your Artist Name</h1>
-    <p>Artist / Musician / Visual Artist</p>
+    <h1>Jimbo Jones</h1>
+    <p>Artist / Musician / Climate Scientist</p>
 
     <nav>
       <a href="#work">Work</a>
-      <a href="#about">About</a>
+      <a href="#images">Images</a>
+      <a href="#about">CV</a>
       <a href="#contact">Contact</a>
     </nav>
 
@@ -24,13 +25,14 @@
 
     <section id="about">
       <h2>About</h2>
-      <p>A short bio goes here.</p>
+      <p>Fuck the individual, 
+        create the collective</p>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
       <p>
-        <a href="mailto:you@example.com">you@example.com</a>
+        <a href="mailto:jamieprm@gmail.com">jamieprm[at]gmail[dot]com</a>
       </p>
     </section>
   </main>
