Split paragraph into two separate lines

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <section id="about">
       <h2>About</h2>
-      <p>Fuck the individual, 
-        create the collective</p>
+      <p>fuck the individual</p>
+      <p>create the collective</p>
     </section>
 
     <section id="contact">
