Update navigation and remove work section

--- a/index.html
+++ b/index.html
@@ -12,28 +12,22 @@
     <p>Artist / Musician / Climate Scientist</p>
 
     <nav>
-      <a href="#work">Work</a>
+    § <a href="https://jimbojonesdub.bandcamp.com" target="_blank">Music</a>
       <a href="#images">Images</a>
       <a href="#about">CV</a>
-      <a href="#contact">Contact</a>
+    <a href="mailto:jamieprm@gmail.com">Contact</a>
     </nav>
 
-    <section id="work">
+<!--    <section id="work">
       <h2>Work</h2>
       <p>Links to music, images, videos, or projects.</p>
     </section>
-
+-->
     <section id="about">
-      <h2>About</h2>
       <p>fuck the individual</p>
       <p>create the collective</p>
     </section>
 
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>
-        <a href="mailto:jamieprm@gmail.com">jamieprm[at]gmail[dot]com</a>
-      </p>
     </section>
   </main>
 </body>
