Fix navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <p>Artist / Musician / Climate Scientist</p>
 
     <nav>
-    § <a href="https://jimbojonesdub.bandcamp.com" target="_blank">Music</a>
+      <a href="https://jimbojonesdub.bandcamp.com" target="_blank">Music</a>
       <a href="#images">Images</a>
-      <a href="#about">CV</a>
-    <a href="mailto:jamieprm@gmail.com">Contact</a>
+      <a href="cv.html">CV</a>
+      <a href="mailto:jamieprm@gmail.com">Contact</a>
     </nav>
 
 <!--    <section id="work">
