Add navigation links and clean up index.html
Added navigation links to the header and removed commented-out code.

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav>
+  <a href="https://jimbojonesdub.bandcamp.com" target="_blank">Music</a>
+  <a href="#images">Images</a>
+  <a href="cv.html">CV</a>
+  <a href="mailto:jamieprm@gmail.com">Contact</a>
+  </nav>
+
   <main>
     <h1>Jimbo Jones</h1>
-    <p>Artist / Musician / Climate Scientist</p>
+<!--     <p>Artist / Musician / Climate Scientist</p>
 
-    <nav>
-      <a href="https://jimbojonesdub.bandcamp.com" target="_blank">Music</a>
-      <a href="#images">Images</a>
-      <a href="cv.html">CV</a>
-      <a href="mailto:jamieprm@gmail.com">Contact</a>
-    </nav>
-
-<!--    <section id="work">
+   <section id="work">
       <h2>Work</h2>
       <p>Links to music, images, videos, or projects.</p>
     </section>
