Update Music link to new Bandcamp URL

--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
 
   <nav>
     <a href="/">Home</a>
-    <a href="https://yourname.bandcamp.com" target="_blank">Music</a>
+    <a href="https://jimbojonesdub.bandcamp.com/" target="_blank">Music</a>
     <a href="mailto:you@example.com">Contact</a>
   </nav>
 
