--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
 -->
     <section id="about">
-      <p>fuck the individual</p>
+      <p>kill the individual</p>
       <p>create the collective</p>
     </section>
 
