--- a/cv.html
+++ b/cv.html
@@ -11,33 +11,93 @@
   <nav>
     <a href="/">Home</a>
     <a href="https://jimbojonesdub.bandcamp.com/" target="_blank">Music</a>
-    <a href="mailto:you@example.com">Contact</a>
+    <a href="mailto:jamieprm@gmail.com">Contact</a>
   </nav>
 
   <main class="cv">
     <h1>Jimbo Jones</h1>
+    <p> (aka) Jamie Mathews <p>
 
     <p>
-      Born YEAR, City, Country<br>
-      Based in City, Country
+      Based in Dublin, Ireland
     </p>
 
     <h2>Education</h2>
     <p>
-      Degree — Institution (Year–Year)<br>
-      Degree — Institution (Year–Year)
+      PhD in Climate Dynamics — Imperial College London (2024)<br>
+      MsC in Physics — Imperial College London (2020)<br>
+      BA in Theoretical Physics - Trinity College Dublin (2018)
+    </p>
+    
+    <h2>Selected Projects</h2>
+
+    <p>
+      <strong>The Heat Death of My Hometown</strong> —
+      <a href="https://jimbojones.bandcamp.com" target="_blank">Jimbo Jones</a> (Feb 2021)<br>
+      Debut studio album exploring housing precarity, stagnant wages, and the erosion
+      of cultural spaces in Dublin.
     </p>
 
-    <h2>Selected Works / Performances</h2>
     <p>
-      Title — Venue, City (Year)<br>
-      Title — Venue, City (Year)
+      <strong>Línte na Farraige</strong> — Climate Scientist (Sep 2022)<br>
+      Funded by <a href="https://www.creativeireland.gov.ie" target="_blank">Creative Ireland</a>.
+      Light installations across Irish coastal sites demonstrating the risks of rising sea levels.
     </p>
 
-    <h2>Exhibitions / Releases</h2>
     <p>
-      Title — Label / Gallery (Year)
+      <strong>The Tape of Life</strong> — Sound Design Programmer (Aug 2023)<br>
+      Audio installation at <a href="https://www.greenman.net" target="_blank">Green Man Festival</a>,
+      funded by the Society for Experimental Biology, Imperial College Seed Fund,
+      and the GW4 MRC BioMed DTP.
     </p>
+
+    <p>
+      <strong>The Looking Game</strong> — Sound Design and Composition (July 2023)<br>
+      Animated short film (7 mins). Selected at the
+      <a href="https://www.aafilmfest.org" target="_blank">Ann Arbor Film Festival</a>.
+    </p>
+
+    <p>
+      <strong>Have Pass Will Travel</strong> — Composer (Dec 2021)<br>
+      Multimedia exhibition funded by <a href="https://www.creativeireland.gov.ie" target="_blank">Creative Ireland</a>.
+    </p>
+
+    <h2>Releases</h2>
+
+    <p>
+      <strong>Music</strong><br>
+      Hot Seat Vol. 3 — Compilation (May 2022)<br>
+      Have Pass Will Travel — Soundtrack (Dec 2021)<br>
+      The Heat Death of My Hometown — Studio Album (Feb 2021)<br>
+      Hot Seat Vol. 1 — Compilation (Aug 2020)
+    </p>
+
+    <p>
+      <strong>Video</strong><br>
+      The Looking Game — Film Score (July 2023)<br>
+      Almost Post Coital — Music Video (Apr 2021)<br>
+      Dart — Music Video (Feb 2021)
+    </p>
+
+    <p>
+      <strong>Print</strong><br>
+      <a href="https://theconversation.com" target="_blank">Shedding Light on Rising Seas…</a> — Blog (Mar 2023)<br>
+      Interviews with <a href="https://nialler9.com" target="_blank">Nialler9</a>,
+      <a href="https://www.hotpress.com" target="_blank">Hot Press</a>,
+      <a href="https://www.theransomnote.com" target="_blank">Ransom Note</a>,
+      <a href="https://plainsailingmag.com" target="_blank">Plain Sailing</a>
+    </p>
+
+    <h2>Awards</h2>
+    <p>
+      <a href="https://www.artscouncil.ie" target="_blank">Irish Arts Council</a> — Agility Award (Aug 2024)<br>
+      Climate Change Communication Award (June 2024)<br>
+      <a href="https://www.egu.eu" target="_blank">EGU</a> Outstanding PhD Candidate (Nov 2023)<br>
+      <a href="https://nialler9.com" target="_blank">Nialler9</a> Top 100 Irish Songs of 2021<br>
+      <a href="https://nialler9.com" target="_blank">Nialler9</a> Top 25 Irish Albums of 2021<br>
+      <a href="https://nialler9.com" target="_blank">Nialler9</a> 30 Best New Irish Artists of 2021
+    </p>
+
   </main>
 
 </body>
