Further edits to cv page

--- a/cv.html
+++ b/cv.html
@@ -21,41 +21,30 @@
     <p>
       Based in Dublin, Ireland
     </p>
-
-    <h2>Education</h2>
-    <p>
-      PhD in Climate Dynamics — Imperial College London (2024)<br>
-      MsC in Physics — Imperial College London (2020)<br>
-      BA in Theoretical Physics - Trinity College Dublin (2018)
-    </p>
     
-    <h2>Selected Projects</h2>
+    <h2>Projects</h2>
 
     <p>
-      <strong>The Heat Death of My Hometown</strong> —
-      <a href="https://jimbojones.bandcamp.com" target="_blank">Jimbo Jones</a> (Feb 2021)<br>
-      Debut studio album exploring housing precarity, stagnant wages, and the erosion
-      of cultural spaces in Dublin.
+      <a href="https://jimbojonesdub.bandcamp.com/album/the-heat-death-of-my-hometown" target="_blank"><strong>Heat Death of My Hometown</strong></a> Debut Studio Album, 54mins. [Self Released Feb 2021]<br>
+      Built from the frustration of skyrocketing rents, ever-stagnant wages, and the erosion of cultural spaces, this concept album guides the listener through a detailed narrative in a rapidly decaying Dublin City. 
     </p>
 
     <p>
-      <strong>Línte na Farraige</strong> — Climate Scientist (Sep 2022)<br>
-      Funded by <a href="https://www.creativeireland.gov.ie" target="_blank">Creative Ireland</a>.
+      <a href="https://www.lintenafarraige.ie/" target="_blank"><strong>Línte na Farraige</strong></a> [Funded by Creative Ireland Sep 2022]<br>
       Light installations across Irish coastal sites demonstrating the risks of rising sea levels.
     </p>
 
     <p>
-      <strong>The Tape of Life</strong> — Sound Design Programmer (Aug 2023)<br>
-      Audio installation at <a href="https://www.greenman.net" target="_blank">Green Man Festival</a>,
-      funded by the Society for Experimental Biology, Imperial College Seed Fund,
-      and the GW4 MRC BioMed DTP.
+      <a href="https://ann-upton.com/projects/the-looking-game/" target="_blank"><strong>The Looking Game</strong></a> [Sound Design July 2023]<br>
+      Animated short film (7 mins) by Ann Upton. 
+    </p>
+    
+    <p>
+      <strong>The Tape of Life</strong> [Green Man Music Festival Aug 2023]<br>
+      Audio installation showcasing aging rates across the animal kingdom. 
     </p>
 
-    <p>
-      <strong>The Looking Game</strong> — Sound Design and Composition (July 2023)<br>
-      Animated short film (7 mins). Selected at the
-      <a href="https://www.aafilmfest.org" target="_blank">Ann Arbor Film Festival</a>.
-    </p>
+
 
     <p>
       <strong>Have Pass Will Travel</strong> — Composer (Dec 2021)<br>
@@ -96,6 +85,13 @@
       <a href="https://nialler9.com" target="_blank">Nialler9</a> Top 100 Irish Songs of 2021<br>
       <a href="https://nialler9.com" target="_blank">Nialler9</a> Top 25 Irish Albums of 2021<br>
       <a href="https://nialler9.com" target="_blank">Nialler9</a> 30 Best New Irish Artists of 2021
+    </p>
+
+    <h2>Education</h2>
+    <p>
+      PhD in Climate Dynamics — Imperial College London (2024)<br>
+      MsC in Physics — Imperial College London (2020)<br>
+      BA in Theoretical Physics - Trinity College Dublin (2018)
     </p>
 
   </main>
