nav bar edit and CV complete

--- a/index.html
+++ b/index.html
@@ -8,11 +8,45 @@
 </head>
 <body>
   <nav>
-  <a href="https://jimbojonesdub.bandcamp.com" target="_blank">Music</a>
-  <a href="#images">Images</a>
-  <a href="cv.html">CV</a>
-  <a href="mailto:jamieprm@gmail.com">Contact</a>
-  </nav>
+  <ul class="nav">
+    <li class="dropdown">
+      <a href="#" aria-haspopup="true" aria-expanded="false">Projects</a>
+      <ul class="dropdown-menu">
+        <li>
+          <a href="we-only-want.html">
+            We Only Want...
+          </a>
+        </li>
+        <li>
+          <a href="https://jimbojonesdub.bandcamp.com/album/the-heat-death-of-my-hometown">
+            The Heat Death of My Hometown
+          </a>
+        </li>
+        <li>
+          <a href="https://www.lintenafarraige.ie/" target="_blank">
+            Línte na Farraige
+          </a>
+        </li>
+        <li>
+          <a href="https://ann-upton.com/projects/the-looking-game/" target="_blank">
+            The Looking Game
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/tapeoflifespan/" target="_blank">
+            Tape of Life
+          </a>
+        </li>
+      </ul>
+    </li>
+    <li>
+      <a href="https://jimbojonesdub.bandcamp.com" target="_blank">Music</a>
+    </li>
+    <li>
+      <a href="mailto:jamieprm@gmail.com">Contact</a>
+    </li>
+  </ul>
+</nav>
 
   <main>
     <h1>Jimbo Jones</h1>
@@ -28,7 +62,6 @@
       <p>create the collective</p>
     </section>
 
-    </section>
   </main>
 </body>
 </html>
