--- a/cv.html
+++ b/cv.html
@@ -21,6 +21,7 @@
       </ul>
     </li>
     <li><a href="https://jimbojonesdub.bandcamp.com" target="_blank">Music</a></li>
+    <li><a href="cv.html">CV</a></li>
     <li><a href="mailto:jamieprm@gmail.com">Contact</a></li>
   </ul>
 </nav>
