--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <li>
       <a href="https://jimbojonesdub.bandcamp.com" target="_blank">Music</a>
     </li>
+    <li><a href="cv.html">CV</a></li>
     <li>
       <a href="mailto:jamieprm@gmail.com">Contact</a>
     </li>
