--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-  
+
 <nav>
   <ul class="nav">
     <li class="dropdown">
       <a href="#">Projects</a>
       <ul class="dropdown-menu">
-        <li><a href="we-only-want.html">We Only Want…</a></li>
+        <a href="we-only-want.html">We Only Want…</a>
         <li><a href="https://jimbojonesdub.bandcamp.com/album/the-heat-death-of-my-hometown" target="_blank">The Heat Death of My Hometown</a></li>
         <li><a href="https://www.lintenafarraige.ie/" target="_blank">Línte na Farraige</a></li>
         <li><a href="https://ann-upton.com/projects/the-looking-game/" target="_blank">The Looking Game</a></li>
