shifting text in CV

--- a/cv.html
+++ b/cv.html
@@ -40,17 +40,17 @@
 
   <h3>Music</h3>
   <p>
-    <a href="https://www.beatport.com/release/hotseat-vol-3/3676397" target="_blank"><strong>Hot Seat Vol. 3</strong></a> <br>[Hotseat Recordings May 2022]<br>
-    <a href="https://jimbojonesdub.bandcamp.com/album/have-pass-will-travel" target="_blank"><strong>Have Pass, Will Travel</strong></a> <br>[Self-release Dec 2021]<br>
-    <a href="https://jimbojonesdub.bandcamp.com/album/the-heat-death-of-my-hometown" target="_blank"><strong>The Heat Death of My Hometown</strong></a> <br>[Self-release Feb 2021]<br>
-    <a href="https://www.beatport.com/release/hotseat-vol-1/3053579" target="_blank"><strong>Hot Seat Vol. 1</strong></a> <br>[Hotseat Recordings Aug 2020]
+    <a href="https://www.beatport.com/release/hotseat-vol-3/3676397" target="_blank"><strong>Hot Seat Vol. 3</strong></a> <br>Hotseat Recordings [May 2022]<br>
+    <a href="https://jimbojonesdub.bandcamp.com/album/have-pass-will-travel" target="_blank"><strong>Have Pass, Will Travel</strong></a> <br>Self-release [Dec 2021]<br>
+    <a href="https://jimbojonesdub.bandcamp.com/album/the-heat-death-of-my-hometown" target="_blank"><strong>The Heat Death of My Hometown</strong></a> <br>Self-release [Feb 2021]<br>
+    <a href="https://www.beatport.com/release/hotseat-vol-1/3053579" target="_blank"><strong>Hot Seat Vol. 1</strong></a> <br>Hotseat Recordings [Aug 2020]
   </p>
 
   <h3>Video</h3>
   <p>
-    <a href="https://ann-upton.com/projects/the-looking-game/" target="_blank"><strong>The Looking Game</strong></a> Film score <br>[July 2023]<br>
-    <a href="https://www.youtube.com/watch?v=8CLqGL6wjy4" target="_blank"><strong>Almost Post Coital</strong></a> Music video <br>[Apr 2021]<br>
-    <a href="https://www.youtube.com/watch?v=gFWsANTpa38" target="_blank"><strong>DART</strong></a> Music video <br>[Feb 2021]
+    <a href="https://ann-upton.com/projects/the-looking-game/" target="_blank"><strong>The Looking Game</strong></a> <br>Film score [July 2023]<br>
+    <a href="https://www.youtube.com/watch?v=8CLqGL6wjy4" target="_blank"><strong>Almost Post Coital</strong></a> <br>Music video [Apr 2021]<br>
+    <a href="https://www.youtube.com/watch?v=gFWsANTpa38" target="_blank"><strong>DART</strong></a> <br>Music video [Feb 2021]
   </p>
 <!--
   <h3>Print</h3>
@@ -64,38 +64,38 @@
 -->
   <h2>Performances</h2>
   <p>
-    <strong>Fuinneamh</strong> Alba Rose <br>[Sep 2025]<br>
-    <strong>ddr. Culture Night</strong> DJ set <br>[Sep 2025]<br>
-    <strong>ddr. Yard Party</strong> DJ set <br>[Aug 2025]<br>
-    <strong>Forbidden Fruit</strong> Live set <br>[June 2025]<br>
-    <strong>Mirabili</strong> Live set <br>[May 2025]<br>
-    <strong>Luckys</strong> DJ set <br>[May 2022]<br>
-    <strong>Nialler9 & Luckys Present</strong> Live set <br>[Oct 2021]<br>
-    <strong>Donk It Yourself</strong> DJ set <br>[Oct 2021–present]<br>
-    <strong>Fulham Festival</strong> Live set <br>[Aug 2021]<br>
-    <strong>STOA Collective</strong> DJ set <br>[June 2021]<br>
-    <strong>Afloat</strong> DJ set <br>[Sep 2020]<br>
-    <strong>Loop Bar</strong> DJ residency <br>[Nov 2018–Apr 2019]<br>
-    <strong>Parallax [with Aoife O’Neill]</strong> DJ set <br>[Dec 2018]<br>
-    <strong>Parallax [with r.kitt]</strong> DJ set <br>[Aug 2018]
+    <strong>Fuinneamh</strong> <br>Alba Rose [Sep 2025]<br>
+    <strong>ddr. Culture Night</strong> <br>DJ set [Sep 2025]<br>
+    <strong>ddr. Yard Party</strong> <br>DJ set [Aug 2025]<br>
+    <strong>Forbidden Fruit</strong> <br>Live set [June 2025]<br>
+    <strong>Mirabili</strong> <br>Live set [May 2025]<br>
+    <strong>Luckys</strong> <br>DJ set [May 2022]<br>
+    <strong>Nialler9 & Luckys Present</strong> <br>Live set [Oct 2021]<br>
+    <strong>Donk It Yourself</strong> <br>DJ set [Oct 2021–present]<br>
+    <strong>Fulham Festival</strong> <br>Live set [Aug 2021]<br>
+    <strong>STOA Collective</strong> <br>DJ set [June 2021]<br>
+    <strong>Afloat</strong> <br>DJ set [Sep 2020]<br>
+    <strong>Loop Bar</strong> <br>DJ residency [Nov 2018–Apr 2019]<br>
+    <strong>Parallax [with Aoife O’Neill]</strong> <br>DJ set [Dec 2018]<br>
+    <strong>Parallax [with r.kitt]</strong> <br>DJ set [Aug 2018]
   </p>
 
   <h2>Funding & Awards</h2>
   <p>
-    <strong>Agility Award</strong> <em>We Only Want…</em> <br>[Aug 2024]<br>
-    <strong>Visionary Award</strong> <em>The Looking Game</em> <br>[June 2024]<br>
-    <strong>Climate Change Communication Award Nominee</strong> <em>Línte na Farraige</em> <br>[Nov 2023]<br>
-    <strong>Imperial College Seed Fund</strong> <em>Tape of Life</em> <br>[Aug 2023]<br>
-    <strong>Nialler9 Top 100 Irish Songs of 2021</strong> <em>The Heat Death of My Hometown</em><br>
-    <strong>Nialler9 Top 25 Irish Albums of 2021</strong> <em>The Heat Death of My Hometown</em><br>
+    <strong>Agility Award</strong> <br><em>We Only Want…</em> [Aug 2024]<br>
+    <strong>Visionary Award</strong> <br><em>The Looking Game</em> [June 2024]<br>
+    <strong>Climate Change Communication Award Nominee</strong> <br><em>Línte na Farraige</em> [Nov 2023]<br>
+    <strong>Imperial College Seed Fund</strong> <br><em>Tape of Life</em> [Aug 2023]<br>
+    <strong>Nialler9 Top 100 Irish Songs of 2021</strong> <br><em>The Heat Death of My Hometown</em><br>
+    <strong>Nialler9 Top 25 Irish Albums of 2021</strong> <br><em>The Heat Death of My Hometown</em><br>
     <strong>Nialler9 30 Best New Irish Artists of 2021</strong>
   </p>
 
   <h2>Education</h2>
   <p>
-    <strong>PhD in Climate Dynamics</strong> Imperial College London <br>[2024]<br>
-    <strong>MSc in Physics</strong> Imperial College London <br>[2020]<br>
-    <strong>BA in Theoretical Physics</strong> Trinity College Dublin <br>[2018]
+    <strong>PhD in Climate Dynamics</strong> <br>Imperial College London [2024]<br>
+    <strong>MSc in Physics</strong> <br>Imperial College London [2020]<br>
+    <strong>BA in Theoretical Physics</strong> <br>Trinity College Dublin [2018]
   </p>
 
 </main>
